feat: add links to header and footer. Add gifts.html with empty container inside.

--- a/christmas-shop/style.css
+++ b/christmas-shop/style.css
@@ -152,7 +152,7 @@ header {
     display: block;
 }
 
-.menu li:hover {
+.menu li:hover[state="enabled"] {
     color: var(--primary);
     background-color: var(--primary10);
 }
