--- a/christmas-shop/style.css
+++ b/christmas-shop/style.css
@@ -332,7 +332,7 @@ a {
 #about-section {
     grid-area: about-section;
     padding: 60px 8px;
-    /* height: 100%; */
+    height: 100%;
     width: 100%;
 }
 
@@ -352,7 +352,7 @@ a {
     align-content: flex-start;
     flex: 1 1 50%;
     max-height: 528px;
-    width: 100%;
+    /* width: 100%; */
     padding: 60px 60px;
 }
 
@@ -760,6 +760,13 @@ main {
     gap: 8px;
 }
 
+#gifts-menu .tab {
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 #gifts-menu a {
     color: var(--static-white);
     border-radius: 12px;
@@ -846,11 +853,11 @@ main {
     }
 
     #about-section .text {
-        max-width: 256px;
+        max-width: 376px;
     }
 }
 
-@media (max-width: 380px) {
+@media (max-width: 381px) {
 
     body {
         overflow-x: hidden;
@@ -867,15 +874,26 @@ main {
 
     #about-section .text {
         padding: 0px 20px;
-        max-width: 324px;
+        /* max-width: 324px; */
+    }
+
+    #about-section .text #about-container {
+        padding: 60px 0;
+    }
+
+    #about-container h2 {
+        text-wrap: wrap balance;
     }
 
     #gifts-menu {
         gap: 0;
     }
 
-    #gifts-menu a {
+    #gifts-menu .tab {
         padding: 12px 8px;
     }
 
+    #hero-section h1 {
+        text-wrap: wrap stable;
+    }
 }
