--- a/christmas-shop/style.css
+++ b/christmas-shop/style.css
@@ -138,6 +138,11 @@ header {
     margin: 0 auto;
 }
 
+header.hide {
+    transform: translateY(-100%);
+    transition: transform 0.3s ease-in-out;
+}
+
 .logo {
     display: flex;
     align-items: center;
