--- a/christmas-shop/style.css
+++ b/christmas-shop/style.css
@@ -134,13 +134,13 @@ header {
     position: fixed;
     width: 100%;
     z-index: 10;
-    
+    transition: transform 0.3s ease-out;
     margin: 0 auto;
 }
 
 header.hide {
     transform: translateY(-100%);
-    transition: transform 0.3s ease-in-out;
+    
 }
 
 .logo {
