fix: fix bug that disabled scrolling when resizing window while burger menu is open

--- a/christmas-shop/style.css
+++ b/christmas-shop/style.css
@@ -408,6 +408,8 @@ a {
     overscroll-behavior-inline: contain;
     /* box-sizing: content-box; */
     scroll-snap-type: x mandatory;
+    /* scroll-behavior: smooth; */
+    /* transition: transform 0.2s ease-in-out; */
 }
 
 #slider-section .slider-item {
