fix: fix slider animation.

--- a/christmas-shop/style.css
+++ b/christmas-shop/style.css
@@ -409,7 +409,7 @@ a {
     /* box-sizing: content-box; */
     scroll-snap-type: x mandatory;
     /* scroll-behavior: smooth; */
-    /* transition: transform 0.2s ease-in-out; */
+    transition: transform 0.2s ease-in-out;
 }
 
 #slider-section .slider-item {
